# Bachelor-scriptie

./: .gitmodules  README.md  pyproject.toml
App/speech_commands/android/: build.gradle  gradle.properties  settings.gradle
App/speech_commands/android/app/: build.gradle  download_model.gradle
App/speech_commands/android/gradle/wrapper/: gradle-wrapper.properties
Prelim/: proposal.aux  proposal.bbl  proposal.blg  proposal.fdb_latexmk  proposal.fls  proposal.tex
models/: ConvertM5Models.ipynb  MFCC_16K_1.tflite  MFCC_16K_3.tflite  MFCC_4T_8K_1.tflite  MFCC_8K_1.tflite  MFCC_8K_2.tflite  MFCC_8K_3.tflite  MFCC_8K_4.tflite  MFCC_8K_5.tflite  MFCC_8K_6.tflite  MFCC_BIG_CNN_SI.ipynb  MFCC_CNN.ipynb  MFCC_CNN_16K_3.tflite  MFCC_CNN_16K_4.tflite  MFCC_CNN_16K_5.tflite  MFCC_CNN_16K_6.tflite  MFCC_CNN_4trig.ipynb  MFCC_CNN_BIG.ipynb  MFCC_CNN_LSTM.ipynb  MFCC_CNN_SI.ipynb  MFCC_LSTM.ipynb  MFCC_LSTM_16K_1.tflite  MFCC_LSTM_16K_2.tflite  MFCC_LSTM_16K_3.tflite  MFCC_LSTM_16K_4.tflite  MFCC_LSTM_16K_5.tflite  MFCC_LSTM_16K_6.tflite  MFCC_LSTM_8K_1.tflite  MFCC_LSTM_8K_2.tflite  MFCC_LSTM_SI.ipynb  MFCC_SI_8K_1.tflite  MFCC_SI_CNN_16K_1.tflite  MFCC_SI_CNN_16K_2.tflite  MFCC_SI_CNN_16K_3.tflite  MFCC_SI_CNN_16K_4.tflite  MFCC_SI_LSTM_16K_1.tflite  MFCC_SI_LSTM_16K_2.tflite  MFCC_SI_LSTM_16K_3.tflite  MFCC_SI_LSTM_16K_4.tflite  model_data_0_lstm_2_2kHz_mid_15_dirty-label.tflite  (+6 more)
scripts/: sox.readme  tones.py
tflite-support/: bazel-bin  bazel-out  bazel-testlogs  bazel-tflite-support
tflite-support/tensorflow_lite_support/tools/pip_package/: setup.py
(+24 files in other folders)
