[tool.poetry]
name = "bachelor-scriptie"
version = "0.1.0"
description = ""
authors = ["Julian van der Horst <julianvanderhorst@hotmail.com>"]
readme = "README.md"
packages = [{include = "bachelor_scriptie"}]

[tool.poetry.dependencies]
python = "^3.10"
pyaudio = "^0.2.13"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
